Make syslogd -u treat "*" as all levels by explictly setting pri_cmp for it.

While I'm here, add a the ability to say "!level" in a way which
should be compatible with Linux's syslogd.

PR:		28935
No objections:	audit
MFC after:	2 weeks


git-svn-id: svn+ssh://svn.freebsd.org/base/head@102940 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f